Fixed lint errors for deployment

--- a/ghi/src/RoomForm.css
+++ b/ghi/src/RoomForm.css
@@ -16,7 +16,7 @@
   width: 100%;
   padding: 10px;
   margin-bottom: 16px;
-  border: 1px solid #000000; /* Add border styling */
+  border: 1px solid #000000;
   border-radius: 3px;
 }
 
