--- a/ghi/src/UsersList.css
+++ b/ghi/src/UsersList.css
@@ -1,11 +1,11 @@
-.rooms-container {
+.users-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   padding: 10px;
 }
 
-.room-card {
+.user-card {
   flex: 1;
   margin: 10px;
   max-width: calc(25% - 20px);
