--- a/ghi/src/Nav.css
+++ b/ghi/src/Nav.css
@@ -42,3 +42,14 @@
   border-radius: 25px;
   text-decoration: none;
 }
+
+.logout-button {
+  background-color: #000000;
+  color: #ffffff;
+  border: none;
+}
+
+.logout-button:hover {
+  background-color: #ffffff;
+  color: #000000;
+}
