--- a/ghi/src/RoomForm.css
+++ b/ghi/src/RoomForm.css
@@ -1,66 +1,52 @@
 .form-container {
-  max-width: 400px;
+  max-width: 80%;
   margin: 0 auto;
   padding: 20px;
-  border: 1px solid #ccc;
   border-radius: 5px;
-  background-color: #f9f9f9;
+  background-color: #ffffff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .label {
   display: block;
-  margin-bottom: 8px;
+  margin-bottom: 0.5rem;
+  font-weight: bold;
 }
 
 .input {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 10px 15px;
+  font-size: 16px;
+  color: #555;
   width: 100%;
-  padding: 10px;
-  margin-bottom: 16px;
-  border: 1px solid #000000;
-  border-radius: 3px;
+  margin-bottom: 10px;
 }
 
 .radio-group {
   margin-bottom: 16px;
 }
 
+.radio-group label {
+  margin-bottom: 8px;
+}
+
+.radio-group input[type="radio"] {
+  margin-right: 10px;
+}
+
 .button {
-  padding: 10px 20px;
+  width: 100%;
+  padding: 10px 0;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
   background-color: #007bff;
   color: #fff;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
 }
 
 .button:hover {
   background-color: #0056b3;
-}
-
-.room-details {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-
-.image-container {
-  margin-bottom: 20px;
-}
-
-.centered-image {
-  max-width: 100%;
-  height: auto;
-}
-
-.text-columns {
-  display: flex;
-  justify-content: space-around;
-}
-
-.column {
-  flex: 1;
-  max-width: 50%;
-  text-align: left;
-  padding: 0 10px;
 }
